<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/formulario"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/enombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/ecorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/epass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/erepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/recontraseña"
                android:inputType="textPassword" />

            <RadioGroup

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/sexo"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/rmasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/masculino"/>
                    //android:onClick="radioButtonClicked"/>

                <RadioButton
                    android:id="@+id/rfemenino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/femenino"
                    android:checked="true"/>
                    //android:onClick="radioButtonClicked1"
                />


            </RadioGroup>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/fecha"
                android:id="@+id/efecha"
                android:onClick="showDatePickerDialog"
                />


            <Spinner
                android:id="@+id/sciudad"
                android:layout_width="match_parent"
                android:layout_height="37dp"

                ></Spinner>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cdormir"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:text="@string/dormir" />

                <CheckBox
                    android:id="@+id/cleer"
                    android:layout_width="81dp"
                    android:layout_height="match_parent"
                    android:text="@string/leer" />

                <CheckBox
                    android:id="@+id/cdeporte"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:text="@string/deporte" />

                <CheckBox
                    android:id="@+id/cinternet"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/internet" />


            </RadioGroup>
            <Button
                android:id="@+id/bguardar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/guardar"
                android:onClick="mostrar"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tnombre"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tpass"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tfecha"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tcorreo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tciudad"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tsexo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"> <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tdormir"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tleer"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tdeporte"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tinternet"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>